# Sipx_Stress_Test

./: .gitignore  Cargo.toml  Config.yaml  LICENSE  README.md  build.bat  build.ps1  build.sh  go.mod  howtouse.md  teach.md
.cargo/: config.toml
cli/: Cargo.toml
cli/src/: args.rs  main.rs
cli/src/tui/: dashboard.rs  mod.rs
cmd/agent/: main.go
cmd/sipload/: main.go
core/: Cargo.toml
core/src/: agent_engine.rs  config.rs  engine.rs  html_reporter.rs  lib.rs  registrar.rs  reporter.rs  sip_logger.rs  stats.rs
core/src/rtp/: audio.rs  mod.rs  packet.rs  session.rs  stats.rs
core/src/sip/: dialog.rs  message.rs  mod.rs  parser.rs  register.rs  transport.rs
gui/: CHANGES.md  package-lock.json  package.json
gui/src/: App.vue  main.ts
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/src/: commands.rs  lib.rs  main.rs
gui/src/components/: ChartPanel.vue  GenerateDialog.vue  LogPanel.vue  MetricStrip.vue  RightPanel.vue  Sidebar.vue  TitleBar.vue
gui/src/stores/: testStore.ts
internal/: logger.go
internal/config/: config.go
internal/media/: rtp.go
internal/sip/: agent_register_and_answer.xml  sip.go  uac_inbound.xml
