[workspace]
resolver = "2"
members = [
    "core",
    "cli",
    "gui/src-tauri",
]

[workspace.dependencies]
tokio       = { version = "1", features = ["full"] }
anyhow      = "1"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
uuid        = { version = "1", features = ["v4"] }
rand        = "0.8"
tracing     = "0.1"
hdrhistogram = "7"
md-5         = "0.10"
