[package]
name    = "sipress-gui"
version = "0.1.0"
edition = "2021"

[lib]
name        = "sipress_gui_lib"
crate-type  = ["cdylib", "rlib"]

[[bin]]
name = "sipress-gui"
path = "src/main.rs"

[dependencies]
sipress-core = { path = "../../core" }
tauri        = { version = "2", features = ["protocol-asset"] }
tokio        = { workspace = true }
anyhow       = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = "0.3"

[features]
default         = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
